crates/test-files/fixtures/compile_errors/duplicate_var_in_child_scope.fe
contract Foo:
    pub fn bar():
        my_array: u256[3]
        sum: u256 = 0
        for i in my_array:
            sum: u256 = 0
